--- a/pom.xml
+++ b/pom.xml
@@ -122,8 +122,7 @@
                 </executions>
                 <configuration>
                     <storyType>html</storyType>
-                    <storyReport>${basedir}/target/easyb/easyb-report.html
-                    </storyReport>
+                    <storyReport>${basedir}/target/easyb/easyb-report.html</storyReport>
                 </configuration>
             </plugin>
         </plugins>
