--- a/pom.xml
+++ b/pom.xml
@@ -34,11 +34,6 @@
                 <version>4.10</version>		
         </dependency>		
         <dependency>		
-                <groupId>com.google.code.gson</groupId>		
-                <artifactId>gson</artifactId>		
-                <version>1.7.1</version>		
-        </dependency>		
-        <dependency>		
                 <groupId>commons-io</groupId>		
                 <artifactId>commons-io</artifactId>		
                 <version>2.4</version>		
@@ -93,6 +88,9 @@
             <plugin>		
                 <groupId>org.springframework.boot</groupId>		
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <wait>500000</wait>
+                </configuration>
                 <executions>
                     <execution>
                         <id>pre-integration-test</id>
@@ -125,7 +123,7 @@
             <plugin>		
                 <groupId>org.easyb</groupId>		
                 <artifactId>maven-easyb-plugin</artifactId>		
-                <version>1.4</version>		
+                <version>1.3</version>		
                 <executions>		
                     <execution>		
                         <phase>integration-test</phase>		
