--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,8 @@ jdk:
 - oraclejdk7
 - openjdk7
 before_script:
-  - "export DISPLAY=:99.0"          # This is required by Selenium FirefoxDriver
-  - "sh -e /etc/init.d/xvfb start"  # Starts a virtual display server
-  - sleep 3                         # Give it a bit time to start
+- "/sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -ac -screen 0 1280x1024x16"
+- sleep 5
 script:
  - mvn integration-test
 after_success:
