--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,8 @@ jdk:
 - oraclejdk7
 - openjdk7
 before_script:
-- "/sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -ac -screen 0 1280x1024x16"
+- export DISPLAY=':99.0'
+- Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 &
 - sleep 5
 script:
  - mvn integration-test
