--- a/pom.xml
+++ b/pom.xml
@@ -80,7 +80,14 @@
             <artifactId>selenium-firefox-driver</artifactId>		
             <version>2.52.0</version>		
             <type>jar</type>		
-        </dependency>		
+        </dependency>
+
+
+        <dependency>
+        <groupId>io.gsonfire</groupId>
+            <artifactId>gson-fire</artifactId>
+            <version>1.5.1</version>
+        </dependency>
     </dependencies>		
 		
     <build>		
