--- a/pom.xml
+++ b/pom.xml
@@ -127,7 +127,10 @@
                     <version>2.6</version>		
                     <configuration>		
                             <format>xml</format>		
-                            <maxmem>256m</maxmem>		
+                            <maxmem>256m</maxmem>
+                            <instrumentation>
+                                <ignoreTrivial>true</ignoreTrivial>                 
+                            </instrumentation>	
                     </configuration>		
             </plugin>		
             <plugin>		
