List invalid upload items

--- a/pom.xml
+++ b/pom.xml
@@ -150,7 +150,7 @@
                 </executions>		
                 <configuration>		
                     <storyType>html</storyType>		
-                    <storyReport>${basedir}/target/easyb/easyb-report.html</storyReport>		
+                    <storyReport>${basedir}/easyb/easyb-report.html</storyReport>		
                 </configuration>		
             </plugin>
         </plugins>		
