--- a/pom.xml
+++ b/pom.xml
@@ -29,14 +29,14 @@
             <optional>true</optional>		
         </dependency>		
         <dependency>		
-                <groupId>junit</groupId>		
-                <artifactId>junit-dep</artifactId>		
-                <version>4.10</version>		
+            <groupId>junit</groupId>		
+            <artifactId>junit-dep</artifactId>		
+            <version>4.10</version>		
         </dependency>		
         <dependency>		
-                <groupId>commons-io</groupId>		
-                <artifactId>commons-io</artifactId>		
-                <version>2.4</version>		
+            <groupId>commons-io</groupId>		
+            <artifactId>commons-io</artifactId>		
+            <version>2.4</version>		
         </dependency>		
         <dependency>		
             <groupId>com.google.guava</groupId>		
@@ -61,7 +61,7 @@
             </exclusions>		
         </dependency>
 
-	    <!-- selenium -->		
+        <!-- selenium -->		
 		
         <dependency>		
             <groupId>org.seleniumhq.selenium</groupId>		
@@ -84,7 +84,7 @@
 
 
         <dependency>
-        <groupId>io.gsonfire</groupId>
+            <groupId>io.gsonfire</groupId>
             <artifactId>gson-fire</artifactId>
             <version>1.5.1</version>
         </dependency>
@@ -117,24 +117,24 @@
                 </executions>
             </plugin>		
             <plugin>		
-                    <groupId>org.eluder.coveralls</groupId>		
-                    <artifactId>coveralls-maven-plugin</artifactId>		
-                    <version>3.0.1</version>		
+                <groupId>org.eluder.coveralls</groupId>		
+                <artifactId>coveralls-maven-plugin</artifactId>		
+                <version>3.0.1</version>		
             </plugin>		
             <plugin>		
-                    <groupId>org.codehaus.mojo</groupId>		
-                    <artifactId>cobertura-maven-plugin</artifactId>		
-                    <version>2.6</version>		
-                    <configuration>		
-                            <format>xml</format>		
-                            <maxmem>256m</maxmem>
-                            <instrumentation>
-                                <ignoreTrivial>true</ignoreTrivial>
-                                <excludes>
-                                    <exclude>com/ohtukki/citations/Application.class</exclude>
-                                </excludes>               
-                            </instrumentation>	
-                    </configuration>		
+                <groupId>org.codehaus.mojo</groupId>		
+                <artifactId>cobertura-maven-plugin</artifactId>		
+                <version>2.6</version>		
+                <configuration>		
+                    <format>xml</format>		
+                    <maxmem>256m</maxmem>
+                    <instrumentation>
+                        <ignoreTrivial>true</ignoreTrivial>
+                        <excludes>
+                            <exclude>com/ohtukki/citations/Application.class</exclude>
+                        </excludes>               
+                    </instrumentation>	
+                </configuration>		
             </plugin>		
             <plugin>		
                 <groupId>org.easyb</groupId>		
@@ -154,5 +154,25 @@
                 </configuration>		
             </plugin>
         </plugins>		
-    </build>		
+    </build>
+    <reporting>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-report-plugin</artifactId>
+                <version>2.19.1</version>
+                <configuration>
+                    <outputDirectory>${basedir}/reporting</outputDirectory>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-site-plugin</artifactId>
+                <version>2.1</version>
+                <configuration>
+                    <outputDirectory>{basedir}/reporting/site</outputDirectory>
+                </configuration>
+            </plugin>
+        </plugins>
+    </reporting>    		
 </project>
